--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,9 @@
     "@svgr/webpack": "^8.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.9.2",
+    "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.9.4",
+    "keen-slider": "^6.8.6",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "react": "^19.0.0",
@@ -33,7 +35,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "tailwindcss": "^4",
-    "tw-animate-css": "^1.2.8",
+    "tw-animate-css": "^1.2.9",
     "typescript": "^5"
   }
 }
