--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
+    "radix-ui": "^1.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
