Add project configuration files for IntelliJ IDEA, including .gitignore, module settings, and VCS mappings. Update authentication module with MongoDB integration and modify user-related classes for consistency.

--- a/backend/auth/pom.xml
+++ b/backend/auth/pom.xml
@@ -9,6 +9,11 @@
             <artifactId>authentication-common</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.tiklakur</groupId>
+            <artifactId>mongo-common</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
     </dependencies>
     <modelVersion>4.0.0</modelVersion>
 
