Refactor user authentication and management: Update role hierarchy to include SUPPORT, modify user-related DTOs to use email instead of username, and implement CRUD operations for user management in UserController and UserService. Add validation annotations for user input and create new DTOs for pagination and user responses.

--- a/backend/auth/src/main/resources/application.properties
+++ b/backend/auth/src/main/resources/application.properties
@@ -11,5 +11,5 @@ jwt.expiration=86400
 # MongoDB Configuration
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=taskly
+spring.data.mongodb.database=tiklakur_core_auth
 spring.data.mongodb.auto-index-creation=true
