--- a/backend/parent/pom.xml
+++ b/backend/parent/pom.xml
@@ -29,6 +29,11 @@
                 <artifactId>mongo-common</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>com.tiklakur</groupId>
+                <artifactId>log-common</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <packaging>pom</packaging>
@@ -41,6 +46,7 @@
         <module>common</module>
         <module>authentication-common</module>
         <module>mongo-common</module>
+        <module>log-common</module>
     </modules>
 
     <version>1.0.0-SNAPSHOT</version>
