Grafana-loki-promtail were added to log-common and auth ms

--- a/backend/auth/pom.xml
+++ b/backend/auth/pom.xml
@@ -14,6 +14,10 @@
             <artifactId>mongo-common</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.tiklakur</groupId>
+            <artifactId>log-common</artifactId>
+        </dependency>
     </dependencies>
     <modelVersion>4.0.0</modelVersion>
 
