--- a/backend/auth/src/main/resources/application.properties
+++ b/backend/auth/src/main/resources/application.properties
@@ -16,4 +16,7 @@ spring.data.mongodb.auto-index-creation=true
 mongock.change-logs-scan-package=com.tiklakur.auth.changelog
 
 
-#spring.data.mongodb.uri=mongodb://root:deneme@localhost:27017/tiklakur_core_auth?authSource=admin
+//spring.data.mongodb.uri=mongodb://root:deneme@localhost:27017/tiklakur_core_auth?authSource=admin
+
+logging.level.root=ERROR
+logging.level.com.tiklakur=INFO
