--- a/backend/parent/log-common/pom.xml
+++ b/backend/parent/log-common/pom.xml
@@ -33,6 +33,13 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>7.4</version>
+        </dependency>
+
     </dependencies>
 
     <name>${project.artifactId}</name>
