--- a/client/package.json
+++ b/client/package.json
@@ -16,16 +16,23 @@
     "@svgr/webpack": "^8.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.9.4",
+    "input-otp": "^1.4.2",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "radix-ui": "^1.3.4",
     "react": "^19.0.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
-    "tailwind-merge": "^3.2.0"
+    "react-resizable-panels": "^3.0.2",
+    "recharts": "^2.15.3",
+    "tailwind-merge": "^3.2.0",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
