--- a/backend/parent/pom.xml
+++ b/backend/parent/pom.xml
@@ -34,6 +34,11 @@
                 <artifactId>log-common</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>com.tiklakur</groupId>
+                <artifactId>email-common</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <packaging>pom</packaging>
@@ -47,6 +52,7 @@
         <module>authentication-common</module>
         <module>mongo-common</module>
         <module>log-common</module>
+        <module>email-common</module>
     </modules>
 
     <version>1.0.0-SNAPSHOT</version>
