--- a/backend/order/pom.xml
+++ b/backend/order/pom.xml
@@ -37,6 +37,12 @@
         <artifactId>spring-data-jpa</artifactId>
         <version>4.0.0-M3</version>
     </dependency>
+
+    <dependency>
+        <groupId>com.iyzipay</groupId>
+        <artifactId>iyzipay-java</artifactId>
+        <version>2.0.139</version>
+    </dependency>
 </dependencies>
 <modelVersion>4.0.0</modelVersion>
 
